ingress-lb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    load-balance: roundrobin
spec:
  ingressClassName: haproxy
  rules:
  - host: "local.test"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open5gs-webui
            port:
              number: 80
